# fastapi-has-permissions

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: contributing.md  license.md
docs/learn/builtin/: has_role.md  has_scope.md  is_authenticated.md
docs/learn/real_world/: overview.md
docs/learn/tutorial/: auto_error.md  boolean_composition.md  class_based.md  custom_errors.md  dep_type.md  first_steps.md  function_based.md  lazy_permissions.md  skip_and_fail.md
fastapi_has_permissions/: __init__.py  _bases.py  _dep.py  _deps_args.py  _errors.py  _func.py  _lazy.py  _permissions.py  _resolvers.py  _results.py  common.py  types.py
tests/: test_common.py  test_func.py  test_lazy.py  test_permissions.py  test_skip.py
